src/test/ui/resolve/suggest-path-instead-of-mod-dot-item.stderr
error[E0423]: expected value, found module `a`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:17:5
   |
LL |     a.I
   |     ^ not a value

error[E0423]: expected value, found module `a`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:22:5
   |
LL |     a.g()
   |     ^ not a value

error[E0423]: expected value, found module `a`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:27:5
   |
LL |     a.b.J
   |     ^ not a value

error[E0423]: expected value, found module `a::b`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:32:5
   |
LL |     pub const I: i32 = 1;
   |     --------------------- similarly named constant `I` defined here
...
LL |     a::b.J
   |     ^^^-
   |        |
   |        help: a constant with a similar name exists: `I`

error[E0423]: expected value, found module `a`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:37:5
   |
LL |     a.b.f();
   |     ^ not a value

error[E0423]: expected value, found module `a::b`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:40:12
   |
LL |     pub const I: i32 = 1;
   |     --------------------- similarly named constant `I` defined here
...
LL |     v.push(a::b);
   |            ^^^-
   |               |
   |               help: a constant with a similar name exists: `I`

error[E0423]: expected value, found module `a::b`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:45:5
   |
LL |     pub const I: i32 = 1;
   |     --------------------- similarly named constant `I` defined here
...
LL |     a::b.f()
   |     ^^^-
   |        |
   |        help: a constant with a similar name exists: `I`

error[E0423]: expected value, found module `a::b`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:50:5
   |
LL |     pub const I: i32 = 1;
   |     --------------------- similarly named constant `I` defined here
...
LL |     a::b
   |     ^^^-
   |        |
   |        help: a constant with a similar name exists: `I`

error[E0423]: expected function, found module `a::b`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:55:5
   |
LL |     pub const I: i32 = 1;
   |     --------------------- similarly named constant `I` defined here
...
LL |     a::b()
   |     ^^^-
   |        |
   |        help: a constant with a similar name exists: `I`

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0423`.
